--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@ ease;
 <div id="148" class="card">
   <div class="image-container">
     <a href="https://www.facebook.com/share/16syBFUUu7/ " target="shajeeb">
-      <img src="">
+    <img src="https://i.ibb.co.com/ccg6ZC3d/IMG-20251214-WA0000-1.jpg" alt="IMG-20251214-WA0000-1" border="0">
     </a>
   </div>
   <div class="name">Ayrin Akter Kakoli </div>
@@ -1349,21 +1349,25 @@ ease;
                 <div class="story-slider">
                     <div class="story-slide active">
                         <div class="story-content">
-                           <img src="https://i.ibb.co.com/YFhzsB6d/IMG-20250928-WA0011.jpg" alt="Success Story 1" class="story-img">
-                            <p class="story-text">আল্লাহর অশেষ রহমত ও মায়ের সাহসে আজ আমি জগন্নাথ বিশ্ববিদ্যালয়ের আইন বিভাগে। ব্রাহ্মণবাড়িয়া সরকারি কলেজ থেকে পথচলা শুরু হলেও এই স্বপ্নটা পূরণ করা সহজ ছিল না। বাবার অনিচ্ছা, আত্মবিশ্বাসের অভাব আর বারবার ব্যর্থতা আমাকে অনেকবার ভেঙেছে।বিইউপি,ঢাকা, জাহাঙ্গীরনগর, চট্টগ্রাম বিশ্ববিদ্যালয়—সবখানেই ব্যর্থ, তবুও হাল ছাড়িনি। মা একা হাতে কোচিংয়ে ভর্তি করান,ভার্সিটি কোচিং এ অনিচ্ছা থাকা সত্ত্বেও বাবা ঠিক ই পাশে ছিলেন। এছাড়াও আমার বোনদের অনেক অবদান ছিলো।  অবশেষে আমি জবির বি-ইউনিটে ২২তম স্থান অর্জন করি। আজ আমি গর্ব করে বলি—“আমি একজন জবিয়ান!” ছোট ভাইবোনদের বলি—“লড়াই চালিয়ে যাও, পড়ে যাও, আবার ওঠো—সাফল্য আসবেই!”</p>
-                            <h4 class="story-author"> কানিজ রুবাইয়া কবির এনি</h4>
-                            <p class="story-position">আইন বিভাগ, জগন্নাথ বিশ্ববিদ্যালয়</p>
+                      <img src="https://i.ibb.co.com/HD2XQTC4/tafi.jpg" alt="tafi" border="0">
+     <p class="story-text">আসসালামু আলাইকুম  
+অবশেষে  আমার  এডমিশন  জার্নি  শেষ হলো।  
+আমার স্বপ্নের ইউনিভার্সিটি ছিল DU । DU  পরীক্ষা দিয়ে আসার পর যখন আমি বুঝতে পারলাম যে আমার এখানে হবে না তখন আমি অনেক ভেঙে পরি।   একের পর এক পরীক্ষা  দেওয়ার পর যখন কোথাও হয় না তখন হতাশা  আরো  বেড়ে যায়। কিন্তু আমার বাবা আমাকে অনেক মেন্টালি সাপোর্ট দেন।তার বিশ্বাস ছিল আমি পারবোই। বাবা মার কথা ভেবে আমি আবার চেষ্টা  শুরু করলাম অবশেষে  আলহামদুলিল্লাহ  বাংলাদেশ কৃষি বিশ্ববিদ্যালয়  এবং রাজশাহী বিশ্ববিদ্যালয়ের  ভর্তির সুযোগ পেলাম। 
+সূরা আনফাল এর ৭০ নাম্বার  আয়াত  এর কথা মনে পরে যায়  আল্লাহ তায়ালা বলেছেন, 
+     ""অবশ্যই তুমি পাবে, যা তোমার থেকে চলে  গেছে তার চেয়েও উত্তম "। 
+বর্তমানে আমি বাংলাদেশ কৃষি বিশ্ববিদ্যালয়  ফিশারিজ   ফ্যাকাল্টিতে   ভর্তি হয়েছি। 
+তাই ছোট ভাই বোনদের একটা কথাই বলতে চাই নিজের উপর বিশ্বাস রেখে পরিশ্রম করে দাও যেটা তোমার নসিবে আছে সেটা তুমি পাবে ইনশাল্লাহ!”</p>
+                            <h4 class="story-author>Tafimul Islam</h4>
+                            <p class="story-position">Fisheries, Bangladesh Agricultural University</p>
                         </div>
                     </div>
                     
                     <div class="story-slide">
                         <div class="story-content">
-                            <img src="https://i.ibb.co.com/BHym72ps/IMG-20250928-WA0024.jpg" alt="Success Story 2" class="story-img">
-                            <p class="story-text">"সাদা এপ্রোন অর্জনের কিছু গল্প:-
-ছোট বেলা থেকেই আমার স্বপ্ন ছিল ডাক্তার হওয়ার, সাদা এপ্রোন পড়ে মানুষের সেবা করার, এটাই ছিল আমার বড় স্বপ্ন গুলোর একটি। 2019 সালের করোনার সময়ে যখন সারা পৃথিবী কষ্টে ছিল তখন আমার এই স্বপ্নটা আরো দৃঢ় হয়। আমি ছোট বেলা থেকে তেমন মেধাবী ছিলাম না কিন্তু পরিশ্রমী ছিলাম। আল্লাহর উপর ভরসা করে এগিয়ে যেতাম। কলেজে উঠার পর থেকে মেডিকেল ভর্তি পরীক্ষা নিয়ে কিছুটা সিরিয়াস হয়ে যায়। বেসিক কাজ ছাড়া সব সময় নিজের লক্ষ্য অর্জনের জন্য পড়াশোনা চালাই। এই সময়টা এত সহজ ছিল না, অনেকবার ব্যর্থ হয়েছি, হতাশার অন্ধকারে ডুবেছি, কখনো কখনো হাল ছেড়ে দিতে ইচ্ছে করেছে‌ কিন্তু ঐ সময় আমার বড় ভাই, পরিবার, শিক্ষকরা আমাকে সাহস দিয়েছে । আমি আবার নতুন করে শুরু করেছি, আল্লাহর কাছে দোয়া করেছি যেন তিনি আমাকে শক্তি দেন, আমাকে, আমার সর্বোচ্চটা দেওয়ার সুযোগ করে দেন, ধৈর্য, পরিশ্রম এবং দৃঢ় ইচ্ছাশক্তির ফলে আজ আমি গোপালগঞ্জ মেডিকেল কলেজের একজন ছাত্র ।
-প্রিয় অনুজেরা, তোমরা স্বপ্ন অনেক বড় দেখো, বিশ্বাস রাখো, সেই অনুযায়ী পরিশ্রম এবং দৃঢ় সংকল্প যদি রাখতে পারো স্বপ্ন একদিন পূরন হবেই ইনশাআল্লাহ 🥰। আমি পারলে তুমি ও পারবে। একদিন তুমি নিজেই দেখবে, কঠোর পরিশ্রম এবং আল্লাহর উপর ভরসার ফল স্বপ্নের বাস্তবায়ন।"</p>
-                            <h4 class="story-author">Md. Akram Hossen </h4>
-                            <p class="story-position">Gopalgonj Medical College</p>
+                              <img src="https://i.ibb.co.com/ccg6ZC3d/IMG-20251214-WA0000-1.jpg" alt="IMG-20251214-WA0000-1" border="0">
+                            <p class="story-text">"Admission journey জীবনের এক কঠিন অধ্যায়। শুরুতেই ডেঙ্গুতে আক্রান্ত হয়ে ভেবেছিলাম হয়তো আর কিছুই করতে পারব না। তবে বাবা- মা সবসময় সাহস জুগিয়েছিল । হাল ছাড়িনি পরিশ্রম চালিয়ে যাই। আল্লাহর অশেষ রহমতে অবশেষে কৃষি গুচ্ছে চান্স হয়।এই সময়টাতে যত অভিজ্ঞতা হয়েছে সারাজীবন কাজে লাগবে। ছোট ভাই বোনদের বলতে চাই ধৈর্য আর বিশ্বাস রেখে পরিশ্রম করে যেতে হবে, যা তোমার জন্য নির্ধারিত  তা অবশ্যই আসবে।</p>
+    <h4 class="story-author"> Ayrin Akter Kakoli </h4>
+                            <p class="story-position">    </p>
                         </div>
                     </div>
                     
@@ -1557,4 +1561,5 @@ ease;
         window.addEventListener('load', checkVisibility);
     </script>
 </body>
+
 </html>
