--- a/index.html
+++ b/index.html
@@ -1338,7 +1338,7 @@ ease;
     </section>
 
     <!-- Success Stories Section -->
-    <!-- <section class="stories-section" id="stories">
+    <section class="stories-section" id="stories">
         <div class="container">
             <div class="section-title">
                 <h2>Success Stories</h2>
@@ -1370,7 +1370,12 @@ ease;
                             <p class="story-position">    </p>
                         </div>
                     </div>
-                    
+
+
+
+
+
+                     <!--
                     <div class="story-slide">
                         <div class="story-content">
                             <img src="https://i.ibb.co.com/S4cCLJ1r/20250604-152725.jpg" alt="Success Story 3" class="story-img">
@@ -1563,3 +1568,4 @@ ease;
 </body>
 
 </html>
+
