Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1349,7 +1349,7 @@ ease;
                 <div class="story-slider">
                     <div class="story-slide active">
                         <div class="story-content">
-                      <img src="https://i.ibb.co.com/HD2XQTC4/tafi.jpg" alt="tafi" border="0">
+                      <img src="https://i.ibb.co.com/HD2XQTC4/tafi.jpg" alt="tafi" border="0" class="story-img">
      <p class="story-text">আসসালামু আলাইকুম  
 অবশেষে  আমার  এডমিশন  জার্নি  শেষ হলো।  
 আমার স্বপ্নের ইউনিভার্সিটি ছিল DU । DU  পরীক্ষা দিয়ে আসার পর যখন আমি বুঝতে পারলাম যে আমার এখানে হবে না তখন আমি অনেক ভেঙে পরি।   একের পর এক পরীক্ষা  দেওয়ার পর যখন কোথাও হয় না তখন হতাশা  আরো  বেড়ে যায়। কিন্তু আমার বাবা আমাকে অনেক মেন্টালি সাপোর্ট দেন।তার বিশ্বাস ছিল আমি পারবোই। বাবা মার কথা ভেবে আমি আবার চেষ্টা  শুরু করলাম অবশেষে  আলহামদুলিল্লাহ  বাংলাদেশ কৃষি বিশ্ববিদ্যালয়  এবং রাজশাহী বিশ্ববিদ্যালয়ের  ভর্তির সুযোগ পেলাম। 
@@ -1364,7 +1364,7 @@ ease;
                     
                     <div class="story-slide">
                         <div class="story-content">
-                              <img src="https://i.ibb.co.com/ccg6ZC3d/IMG-20251214-WA0000-1.jpg" alt="IMG-20251214-WA0000-1" border="0">
+                              <img src="https://i.ibb.co.com/ccg6ZC3d/IMG-20251214-WA0000-1.jpg" alt="IMG-20251214-WA0000-1" border="0" class="story-img">
                             <p class="story-text">"Admission journey জীবনের এক কঠিন অধ্যায়। শুরুতেই ডেঙ্গুতে আক্রান্ত হয়ে ভেবেছিলাম হয়তো আর কিছুই করতে পারব না। তবে বাবা- মা সবসময় সাহস জুগিয়েছিল । হাল ছাড়িনি পরিশ্রম চালিয়ে যাই। আল্লাহর অশেষ রহমতে অবশেষে কৃষি গুচ্ছে চান্স হয়।এই সময়টাতে যত অভিজ্ঞতা হয়েছে সারাজীবন কাজে লাগবে। ছোট ভাই বোনদের বলতে চাই ধৈর্য আর বিশ্বাস রেখে পরিশ্রম করে যেতে হবে, যা তোমার জন্য নির্ধারিত  তা অবশ্যই আসবে।</p>
     <h4 class="story-author"> Ayrin Akter Kakoli </h4>
                             <p class="story-position">    </p>
@@ -1374,8 +1374,7 @@ ease;
 
 
 
-
-                     <!--
+<!-- 
                     <div class="story-slide">
                         <div class="story-content">
                             <img src="https://i.ibb.co.com/S4cCLJ1r/20250604-152725.jpg" alt="Success Story 3" class="story-img">
@@ -1385,7 +1384,7 @@ ease;
 বাংলাদেশ প্রকৌশল বিশ্ববিদ্যালয়</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 
                 <div class="slider-controls">
                     <button class="slider-btn" id="prevBtn"><i class="fas fa-chevron-left"></i></button>
@@ -1568,4 +1567,5 @@ ease;
 </body>
 
 </html>
+
 
