--- a/index.html
+++ b/index.html
@@ -1262,6 +1262,37 @@ ease;
   </div>
 </div>
 
+<div id="145" class="card">
+  <div class="image-container">
+    <a href="https://www.facebook.com/wsez3d2pgl" target="_blank">
+  <img src="https://i.ibb.co.com/5hDw4Rr6/IMG-20251024-WA0070-Mithon-Kumer.jpg" alt="mithon" border="0" /></a>
+  </div>
+  <div class="name">Mithon Kumar Datta</div>
+  <div class="bio">ID : 89</div>
+  <div class="versity">
+    <svg class="icon" viewBox="0 0 24 24">
+      <path d="M12 3L1 9l11 6 9-4.91V17h2V9L12 3zm0 9L3.74 9 12 5l8.26 4L12 12zm-6 4v2c0 2.21 3.58 4 8 4s8-1.79 8-4v-2l-8 3-8-3z" />
+    </svg>
+    <span class="value">Gazipur Agricultural University</span>
+  </div>
+  <div class="subject">
+    <svg class="icon" viewBox="0 0 24 24">
+      <path d="M2 4v16c2-1.5 5-2 8-2s6 0.5 8 2V4c-2-1.5-5-2-8-2s-6 0.5-8 2zm8 0c2.5 0 5 .5 6 1.5v12c-1-.7-3.5-1.5-6-1.5s-5 .8-6 1.5v-12C5 4.5 7.5 4 10 4z" />
+    </svg>
+    <span class="value">Faculty of Agriculture</span>
+  </div>
+  <div class="gmail">
+    <svg class="icon" viewBox="0 0 24 24">
+      <path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" />
+    </svg>
+    <span class="value">mithonkumar30@gmail.com</span>
+  </div>
+</div>
+    
+
+
+                
+
 <div id="156" class="card">
   <div class="image-container">
 <a href="https://www.facebook.com/share/1CpeC1b8fd/" target="_blank">
@@ -1568,6 +1599,7 @@ Bangladesh Agricultural University</p>
 </body>
 
 </html>
+
 
 
 
